--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -20,6 +20,10 @@
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="actionRequired"
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -57,5 +61,17 @@
         android:id="@+id/favouriteFragment"
         android:name="it.unica.ium.italiantour.FavouriteFragment"
         android:label="Preferiti"
-        tools:layout="@layout/fragment_favourite_list" />
+        tools:layout="@layout/fragment_favourite_list" >
+        <action
+            android:id="@+id/action_favouriteFragment_to_mapFragment"
+            app:destination="@id/mapFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" >
+            <argument
+                android:name="actionRequired"
+                android:defaultValue="1" />
+        </action>
+    </fragment>
 </navigation>
