--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/favouriteFragment"
         android:title="Preferiti"/>
+    <item
+        android:id="@+id/newMarkerFragment"
+        android:title="Aggiungi luogo"/>
 </menu>
