--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/details_panel"
+    android:background="@color/colorPrimaryDark"
     app:layout_behavior="@string/bottom_sheet_behavior"
     app:behavior_peekHeight="68dp"
     app:behavior_hideable="true"
