--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:id="@+id/marker_thumbnail"
