--- a/app/src/main/res/layout/fragment_new_marker.xml
+++ b/app/src/main/res/layout/fragment_new_marker.xml
@@ -137,7 +137,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:scaleType="centerCrop"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintStart_toStartOf="@+id/newMarker_fotoText"
                 app:layout_constraintTop_toBottomOf="@+id/newMarker_pictureBtn"
                 tools:src="@tools:sample/backgrounds/scenic[12]" />
