--- a/app/src/main/res/layout/fragment_new_marker.xml
+++ b/app/src/main/res/layout/fragment_new_marker.xml
@@ -17,36 +17,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/newMarker_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Aggiungi un nuovo Luogo"
-                android:textSize="18sp"
-                app:fontFamily="serif"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_conversion_absoluteHeight="32dp"
-                tools:layout_conversion_absoluteWidth="207dp" />
-
-
             <EditText
                 android:id="@+id/newMarker_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:ems="10"
-                android:hint="Nome del luogo"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/newMarker_title"
+                app:layout_constraintTop_toBottomOf="@+id/newMarker_position_text4"
                 tools:layout_conversion_absoluteHeight="45dp"
                 tools:layout_conversion_absoluteWidth="0dp" />
 
@@ -54,15 +37,13 @@
                 android:id="@+id/newMarker_hours"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:ems="10"
-                android:hint="Orari di apertura"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/newMarker_name"
-                app:layout_constraintTop_toBottomOf="@+id/newMarker_name"
+                app:layout_constraintTop_toBottomOf="@+id/newMarker_position_text3"
                 tools:layout_conversion_absoluteHeight="45dp"
                 tools:layout_conversion_absoluteWidth="0dp" />
 
@@ -70,15 +51,13 @@
                 android:id="@+id/newMarker_desc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:ems="10"
-                android:hint="Descrizione del luogo"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/newMarker_name"
-                app:layout_constraintTop_toBottomOf="@+id/newMarker_hours"
+                app:layout_constraintTop_toBottomOf="@+id/newMarker_position_text2"
                 tools:layout_conversion_absoluteHeight="45dp"
                 tools:layout_conversion_absoluteWidth="0dp" />
 
@@ -86,23 +65,50 @@
                 android:id="@+id/newMarker_position_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
                 android:text="Posizione"
-                app:layout_constraintStart_toStartOf="@+id/newMarker_desc"
+                app:layout_constraintStart_toStartOf="@+id/newMarker_position_text2"
                 app:layout_constraintTop_toBottomOf="@+id/newMarker_desc" />
+
+            <TextView
+                android:id="@+id/newMarker_position_text2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Descrizione"
+                app:layout_constraintStart_toStartOf="@+id/newMarker_position_text3"
+                app:layout_constraintTop_toBottomOf="@+id/newMarker_hours" />
+
+            <TextView
+                android:id="@+id/newMarker_position_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Orari di apertura"
+                app:layout_constraintStart_toStartOf="@+id/newMarker_position_text4"
+                app:layout_constraintTop_toBottomOf="@+id/newMarker_name" />
+
+            <TextView
+                android:id="@+id/newMarker_position_text4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="24dp"
+                android:text="Nome"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <fragment
                 android:id="@+id/newMarker_fragment"
                 android:name="it.unica.ium.italiantour.WorkaroundMapFragment"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginLeft="32dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/newMarker_position_text" />
@@ -111,25 +117,12 @@
                 android:id="@+id/newMarker_fotoText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Foto:"
-                app:layout_constraintBottom_toBottomOf="@+id/newMarker_pictureBtn"
                 app:layout_constraintStart_toStartOf="@+id/newMarker_position_text"
-                app:layout_constraintTop_toTopOf="@+id/newMarker_pictureBtn" />
-
-            <Button
-                android:id="@+id/newMarker_pictureBtn"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:text="Aggiungi/Modifica Foto"
-                android:textSize="12sp"
-                app:layout_constraintStart_toEndOf="@+id/newMarker_fotoText"
                 app:layout_constraintTop_toBottomOf="@+id/newMarker_fragment" />
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/newMarker_imageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -138,9 +131,9 @@
                 android:layout_marginTop="8dp"
                 android:scaleType="centerCrop"
                 android:visibility="visible"
+                android:background="@drawable/ic_add_image_white_24dp"
                 app:layout_constraintStart_toStartOf="@+id/newMarker_fotoText"
-                app:layout_constraintTop_toBottomOf="@+id/newMarker_pictureBtn"
-                tools:src="@tools:sample/backgrounds/scenic[12]" />
+                app:layout_constraintTop_toBottomOf="@+id/newMarker_fotoText" />
 
             <Button
                 android:id="@+id/newMarker_add_button"
