--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="24dp"
                 android:text="Crea un nuovo account"
                 android:textSize="18sp"
-                app:fontFamily="serif"
+                app:fontFamily="sans-serif-smallcaps"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/registerLogo" />
@@ -43,7 +43,7 @@
                 android:id="@+id/registerEmailField"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:ems="10"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
