--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,23 +5,23 @@
     android:id="@+id/details_panel"
     android:background="@color/colorPrimaryDark"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    app:behavior_peekHeight="68dp"
+    app:behavior_peekHeight="104dp"
     app:behavior_hideable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/details_thumbnail"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
         android:contentDescription="Foto"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
+        android:background="@drawable/ic_broken_image_white_24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_image_black_24dp" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/details_title"
@@ -32,6 +32,8 @@
         android:layout_marginTop="8dp"
         android:text="Titolo"
         android:textAppearance="?attr/textAppearanceListItem"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/details_thumbnail"
         app:layout_constraintTop_toTopOf="@+id/details_thumbnail" />
 
@@ -44,6 +46,7 @@
         android:layout_marginRight="8dp"
         android:text="Orari"
         android:textAppearance="?attr/textAppearanceListItem"
+        android:textStyle="italic"
         app:layout_constraintEnd_toStartOf="@+id/details_favButton"
         app:layout_constraintStart_toStartOf="@+id/details_title"
         app:layout_constraintTop_toBottomOf="@id/details_title" />
@@ -54,12 +57,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
         android:text="Descrizione"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/details_thumbnail" />
+        app:layout_constraintTop_toBottomOf="@+id/details_nav" />
 
     <Button
         android:id="@+id/details_favButton"
@@ -72,7 +74,17 @@
         android:drawableLeft="@drawable/ic_favorite_border_white_24dp"
         android:text="Aggiungi"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/details_nav"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_navigation_white_24dp"
+        android:drawableLeft="@drawable/ic_navigation_white_24dp"
+        android:text="Naviga"
+        app:layout_constraintEnd_toEndOf="@+id/details_favButton"
+        app:layout_constraintStart_toStartOf="@+id/details_favButton"
+        app:layout_constraintTop_toBottomOf="@+id/details_favButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
