--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -25,15 +25,18 @@
 
     <TextView
         android:id="@+id/details_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Titolo"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/details_favButton"
         app:layout_constraintStart_toEndOf="@+id/details_thumbnail"
         app:layout_constraintTop_toTopOf="@+id/details_thumbnail" />
 
