--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -88,6 +88,6 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
-    <action android:id="@+id/action_global_newFragment"
-        app:destination="@id/newMarkerFragment"/>
+    <action android:id="@+id/action_global_mapFragment"
+        app:destination="@id/mapFragment"/>
 </navigation>
