--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/filterLayout"
-    android:layout_width="match_parent"
+    android:layout_width="250dp"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -24,12 +24,12 @@
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Filtro"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/filter_icon"
+        app:layout_constraintEnd_toStartOf="@+id/check"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
