--- a/app/src/main/res/layout/fragment_favourite_list.xml
+++ b/app/src/main/res/layout/fragment_favourite_list.xml
@@ -5,8 +5,11 @@
     android:name="it.unica.ium.italiantour.FavouriteFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
+    android:background="@color/colorPrimary"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".FavouriteFragment"
     tools:listitem="@layout/fragment_favourite" />
