Made black and white icon elements follow text color of theme applied. Switched theme to light-type. Added logout option. New marker screen's  position marker is draggable on long press. Small changes to header and details panel

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -90,4 +90,12 @@
     </fragment>
     <action android:id="@+id/action_global_mapFragment"
         app:destination="@id/mapFragment"/>
+    <fragment
+        android:id="@+id/logoutFragment"
+        android:name="it.unica.ium.italiantour.LogoutFragment"
+        android:label="LogoutFragment" >
+        <action
+            android:id="@+id/action_logoutFragment_to_mapFragment"
+            app:destination="@id/mapFragment" />
+    </fragment>
 </navigation>
