--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/details_panel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
+    android:background="?attr/colorPrimaryDark"
     app:behavior_hideable="true"
     app:behavior_peekHeight="120dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
@@ -21,7 +21,7 @@
         android:id="@+id/details_card"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
 
         <Button
             android:id="@+id/details_favButton"
-            android:layout_width="wrap_content"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
@@ -107,7 +107,7 @@
         android:paddingRight="8dp"
         android:paddingBottom="16dp"
         android:text="Descrizione"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
