--- a/app/src/main/res/layout/fragment_favourite_list.xml
+++ b/app/src/main/res/layout/fragment_favourite_list.xml
@@ -9,7 +9,7 @@
     android:paddingRight="4dp"
     android:paddingTop="4dp"
     android:paddingBottom="4dp"
-    android:background="?attr/colorPrimary"
+    android:background="?attr/colorPrimaryDark"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".FavouriteFragment"
     tools:listitem="@layout/fragment_favourite" />
