--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#708D9B</color>
-    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorPrimaryDark">#657A84</color>
+    <color name="colorPrimary">#809DAB</color>
     <color name="colorWhite">#D0D0D0</color>
 
     <color name="colorMonument">#9c27b0</color>
