Reviewed details panel animations a little: it will move out of the way if the filter panel is opened.

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/details_panel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimaryDark"
+    android:background="?attr/colorPrimary"
     app:behavior_hideable="true"
     app:behavior_peekHeight="120dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
@@ -21,7 +21,7 @@
         android:id="@+id/details_card"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorBackgroundFloating"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +107,7 @@
         android:paddingRight="8dp"
         android:paddingBottom="16dp"
         android:text="Descrizione"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorBackgroundFloating"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
