--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
-    android:background="?attr/colorPrimary">
+    android:background="?attr/colorBackgroundFloating">
 
     <ImageView
         android:id="@+id/marker_thumbnail"
